# hh_c

./: .clang-tidy  .gitignore  README.md  meson.build  meson.options
include/c/: highwayhash.h
include/hh_c/: highwayhash.h  highwayhash_internal.h
src/: highwayhash.c  highwayhash_avx2.c  highwayhash_common.c  highwayhash_portable.c  highwayhash_test.c
